# KitchAI-SIGR

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  ORDER_STATUS_SYSTEM_IMPLEMENTATION.md  PR_DESCRIPTION.md  README.md  ROLES_PERMISSIONS_README.md  VALIDATION_CHECKLIST.md  api_tests.http  implement_order.py  init_db.py  main.py  pyproject.toml  run_api_tests.py  run_tests_with_file.py  seed_menu.py  test_auth_api.ps1  test_auth_simple.ps1  test_inventory_auto_update.py  test_inventory_auto_update_service.py  test_inventory_crud.py  test_inventory_min_stock_alerts.py  test_order_status.py  test_order_status_complete.py  test_roles_permissions.ps1  test_service_modalities.py  test_turso_connection.py
docs/: API_AUTH_GUIDE.md  INVENTORY_AUTO_UPDATE_GUIDE.md  INVENTORY_GUIDE.md  INVENTORY_MIN_STOCK_ALERTS_GUIDE.md  README_AUTH.md  ROLES_PERMISSIONS_GUIDE.md  TURSO_DB_SETUP.md
frontend/: .gitignore  README.md  package.json
frontend/app/: page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/configuracion/: page.tsx
frontend/app/admin/empleados/: page.tsx
frontend/app/admin/inventario/: page.tsx
frontend/app/admin/menu/: page.tsx
frontend/app/cliente/: page.tsx
frontend/app/cliente/chat/: page.tsx
frontend/app/empleado/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/dashboard/: dashboard-layout.tsx  kpi-card.tsx  sidebar-nav.tsx  status-badge.tsx  topbar.tsx
frontend/components/public/: footer.tsx  hero-section.tsx  menu-section.tsx  navbar.tsx  reservation-section.tsx
frontend/lib/: data.ts
(+65 files in other folders)
